--- a/TheBluePrinter.csproj
+++ b/TheBluePrinter.csproj
@@ -208,6 +208,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icon512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icon256.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="IconRendered512.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Text.Json.6.0.1\build\System.Text.Json.targets" Condition="Exists('packages\System.Text.Json.6.0.1\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
